# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.ConsumeArticleExist"
+                            "$ref": "#/definitions/rschema.ConsumeArticleExist"
                         }
                     }
                 ],
@@ -57,7 +57,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.SendArticleExist"
+                            "$ref": "#/definitions/rschema.SendArticleExist"
                         }
                     }
                 ],
@@ -497,13 +497,13 @@
         "consume.logoutMessage": {
             "type": "object",
             "properties": {
+                "correlation_id": {
+                    "type": "string",
+                    "example": "123123"
+                },
                 "message": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbklEIjoiNjZiNjBlYzhlMGYzYzY4OTUzMzJlOWNmIiwidXNlcklEIjoiNjZhZmQ3ZWU4YTBhYjRjZjQ0YTQ3NDcyIn0.who7upBctOpmlVmTvOgH1qFKOHKXmuQCkEjMV3qeySg"
-                },
-                "type": {
-                    "type": "string",
-                    "example": "logout"
                 }
             }
         },
@@ -537,7 +537,7 @@
                 }
             }
         },
-        "service.ArticleExistMessage": {
+        "rschema.ArticleExistMessage": {
             "type": "object",
             "properties": {
                 "articleId": {
@@ -559,15 +559,19 @@
                 }
             }
         },
-        "service.ConsumeArticleExist": {
+        "rschema.ConsumeArticleExist": {
             "type": "object",
             "properties": {
+                "correlation_id": {
+                    "type": "string",
+                    "example": "123123"
+                },
                 "exchange": {
                     "type": "string",
                     "example": "Remote Exchange to Reply"
                 },
                 "message": {
-                    "$ref": "#/definitions/service.ConsumeArticleExistMessage"
+                    "$ref": "#/definitions/rschema.ConsumeArticleExistMessage"
                 },
                 "routing_key": {
                     "type": "string",
@@ -575,7 +579,7 @@
                 }
             }
         },
-        "service.ConsumeArticleExistMessage": {
+        "rschema.ConsumeArticleExistMessage": {
             "type": "object",
             "properties": {
                 "articleId": {
@@ -585,6 +589,18 @@
                 "referenceId": {
                     "type": "string",
                     "example": "Remote Reference Object Id"
+                }
+            }
+        },
+        "rschema.SendArticleExist": {
+            "type": "object",
+            "properties": {
+                "correlation_id": {
+                    "type": "string",
+                    "example": "123123"
+                },
+                "message": {
+                    "$ref": "#/definitions/rschema.ArticleExistMessage"
                 }
             }
         },
@@ -613,14 +629,6 @@
                 },
                 "orderId": {
                     "type": "string"
-                }
-            }
-        },
-        "service.SendArticleExist": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "$ref": "#/definitions/service.ArticleExistMessage"
                 }
             }
         }
